// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no-class-inheritance > javascript - es latest > ignoreCodePattern > should report class inheritance with non-matching identifiers 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 11,
      "endColumn": 22,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected inheritance, use composition instead.",
      "messageId": "extends",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
  ],
  "output": "class Bar extends Foo {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 11,
          "endColumn": 22,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected inheritance, use composition instead.",
          "messageId": "extends",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
      ],
      "output": "class Bar extends Foo {}",
    },
  ],
}
`;

exports[`no-class-inheritance > javascript - es latest > options > ignoreIdentifierPattern > should report class inheritance with non-matching identifiers 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 11,
      "endColumn": 22,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected inheritance, use composition instead.",
      "messageId": "extends",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
  ],
  "output": "class Bar extends Foo {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 11,
          "endColumn": 22,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected inheritance, use composition instead.",
          "messageId": "extends",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
      ],
      "output": "class Bar extends Foo {}",
    },
  ],
}
`;

exports[`no-class-inheritance > javascript - es latest > reports class inheritance 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 11,
      "endColumn": 22,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected inheritance, use composition instead.",
      "messageId": "extends",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
  ],
  "output": "class Foo extends Bar {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 11,
          "endColumn": 22,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected inheritance, use composition instead.",
          "messageId": "extends",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
      ],
      "output": "class Foo extends Bar {}",
    },
  ],
}
`;

exports[`no-class-inheritance > typescript > ignoreCodePattern > should report class inheritance with non-matching identifiers 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected abstract class.",
      "messageId": "abstract",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
  ],
  "output": "abstract class Bar {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected abstract class.",
          "messageId": "abstract",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
      ],
      "output": "abstract class Bar {}",
    },
  ],
}
`;

exports[`no-class-inheritance > typescript > options > ignoreIdentifierPattern > should report class inheritance with non-matching identifiers 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected abstract class.",
      "messageId": "abstract",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
  ],
  "output": "abstract class Bar {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected abstract class.",
          "messageId": "abstract",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
      ],
      "output": "abstract class Bar {}",
    },
  ],
}
`;

exports[`no-class-inheritance > typescript > reports class inheritance 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected abstract class.",
      "messageId": "abstract",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
  ],
  "output": "abstract class Foo {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected abstract class.",
          "messageId": "abstract",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
      ],
      "output": "abstract class Foo {}",
    },
  ],
}
`;

exports[`no-class-inheritance > typescript > reports class inheritance 2`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected abstract class.",
      "messageId": "abstract",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
    {
      "column": 20,
      "endColumn": 31,
      "endLine": 1,
      "line": 1,
      "message": "Unexpected inheritance, use composition instead.",
      "messageId": "extends",
      "ruleId": "no-class-inheritance",
      "severity": 2,
    },
  ],
  "output": "abstract class Foo extends Bar {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected abstract class.",
          "messageId": "abstract",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
        {
          "column": 20,
          "endColumn": 31,
          "endLine": 1,
          "line": 1,
          "message": "Unexpected inheritance, use composition instead.",
          "messageId": "extends",
          "ruleId": "rule-to-test/no-class-inheritance",
          "severity": 2,
        },
      ],
      "output": "abstract class Foo extends Bar {}",
    },
  ],
}
`;
